[metadata]
name = libvirt_vmcfg
version = 0.0.3
description = XML builder for libvirt virtual machine configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elizafox/libvirt_vmcfg
author = Elizabeth Myers
author_email = elizabeth.jennifer.myers@gmail.com
keywords = libvirt, virtual machines, xml generator
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Text Processing :: Markup :: XML
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Reports = https://github.com/Elizafox/libvirt_vmcfg/issues
    Donations = https://paypal.me/Elizafox
    Say Thanks = https://saythanks.io/to/elizabeth.jennifer.myers%%40gmail.com
    Source = https://github.com/Elizafox/libvirt_vmcfg

[options]
packages = find:
python_requires = >=3.8, <4
install_requires =
    lxml

[bdist_wheel]
universal=1

[build_sphinx]
project = libvirt_vmcfg
version = 0.0
release = 0.0.3
source-dir = docs/source
